# Nmap Changelog ($Id$); -*-text-*-

Nmap 5.10BETA1 [2009-11-23]

o Added 14 new NSE scripts for a grand total of 72! You can learn
  about them all at http://nmap.org/nsedoc/. Here are the new ones:

  o smb-psexec implements remote process execution similar to the
    Sysinternals' psexec tool (or Metasploit's psexec "exploit"),
    allowing a user to run a series of programs on a remote machine
    and read the output. This is great for gathering information about
    servers, running the same tool on a range of system, or even
    installing a backdoor on a collection of computers. See
    http://nmap.org/nsedoc/scripts/smb-psexec.html [Ron]

  o dhcp-discover sends out DHCP probes on UDP/67 and displays all
    interesting results (or, with verbosity, all results).
    Optionally, multiple probes can be sent and the MAC address can be
    randomized in an attempt to exhaust the DHCP server's address pool
    and potentially create a denial of service condition. See
    http://nmap.org/nsedoc/scripts/dhcp-discover.html. [Ron]

  o http-enum enumerates URLs used by popular web applications and
    servers and reports which ones exist on a target web server. See
    http://nmap.org/nsedoc/scripts/http-enum.html. [Ron, Andrew Orr,
    Rob Nicholls]

  o ssl-cert retrieves and prints a target server's SSL
    certificate. See
    http://nmap.org/nsedoc/scripts/ssl-cert.html. [David]

  o x11-access checks whether access to an X11 server is allowed (as
    with "xhost +" for example). See
    http://nmap.org/nsedoc/scripts/x11-access.html. [jlanthea]

  o db2-info enhances DB2 database instance detection. It provides
    detection when version probes fail, but will default to the
    version detection probe value if that is more precise. It also
    detects the server platform and database instance name. The DB2
    version detection port ranges were broadened to 50000-50025 and
    60000-60025 as well. See
    http://nmap.org/nsedoc/scripts/db2-info.html. [Tom]
